--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
             <p class="second_box_container_text">Holidays around the world that you deserve</p>
             <button class="second_box_container_btn">order trip</button>
         </div>
+        <img src="./imgs/2.2_icon_fly.svg" alt="fly">
     </div>
+
+
 
 </section>
 
@@ -131,10 +134,10 @@
 <div class="fifth_box">
     <div class="fifth_box_cont">
         <div class="fifth_box_cont_title">the most popular ways</div>
-        <div class="fifth_box_cont_img">
-            <img src="./imgs/5.1_Img.png" alt="5.1" class="fifth_box_cont_img_img1">
-            <img src="./imgs/5.2_Img.png" alt="5.2" class="fifth_box_cont_img_img2">
-            <img src="./imgs/5.3_Img.png" alt="5.3" class="fifth_box_cont_img_img3">
+        <div class="fifth_box_cont_img  ">
+            <div class="fifth_box_cont_img images1"><img src="./imgs/5.1_Img.jpg" alt="5.1" class="fifth_box_cont_img_img1"><p>Beautiful Architecture of Prague</p></div> 
+            <div class="fifth_box_cont_img images2"><img src="./imgs/5.2_Img.png" alt="5.2" class="fifth_box_cont_img_img2"><p>Gastronomic Tour in Portugal</p></div>
+            <div class="fifth_box_cont_img images3"><img src="./imgs/5.3_Img.png" alt="5.3" class="fifth_box_cont_img_img3"><p>Breathtaking Dubai</p></div>
             
         </div>
         <button class="fifth_box_cont_btn">VIEW MORE</button>
