--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
     <div class="sixth_box_cont">
         <div class="sixth_box_cont title">travel stories</div>
         <div class="sixth_box_cont images">
-            <img src="./imgs/6.2_Img.jpg" alt="6.2" class="images_img1">
-            <img src="./imgs/6.3_Img.jpg" alt="6.3" class="images_img2">
-            <img src="./imgs/6.4_img.jpg" alt="6.4" class="images_img3">
+            <div class="sixth_box_cont_img images_images1"><img src="./imgs/6.2_Img.jpg" alt="6.2" class="images_img1"><p>Incredible Thailand</p><img class="icon1" src="./imgs/6.5_icon_play.svg" alt="icon"></div>
+            <div class="sixth_box_cont_img images_images2"><img src="./imgs/6.3_Img.jpg" alt="6.3" class="images_img2"><p>Our story for 90 seconds</p><img class="icon2" src="./imgs/6.5_icon_play.svg" alt="icon"></div>
+            <div class="sixth_box_cont_img images_images3"><img src="./imgs/6.4_img.jpg" alt="6.4" class="images_img3"><p>Unexplored Aurora’s Light</p><img class="icon3" src="./imgs/6.5_icon_play.svg" alt="icon"></div>
         </div>
     </div>
 </div>
